--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,6 @@ on:
 
 
 jobs:
-  static:
-    name: M2 Coding Standard
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: extdn/github-actions-m2/magento-coding-standard@master
   run-linters:
     name: Run linters
     runs-on: ubuntu-latest
@@ -19,17 +13,16 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
         with:
-          node-version: 16
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: npm init && npm install eslint prettier
+          php-version: "7.4"
+          coverage: none
+          tools: phpcs
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
         with:
-          eslint: true
-          prettier: true
+          php_codesniffer: true
+          # Optional: Ignore warnings
+          php_codesniffer_args: "-n"
