--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/vaibhav-prabhu/Magento2template#readme",
   "dependencies": {
-    "eslint": "^8.39.0",
     "prettier": "^2.8.8"
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
