--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,11 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm ci && npm init @eslint/config
+        run: npm ci
 
       - name: Run linters
-        uses: wearerequired/lint-action@v2
+        uses: sibiraj-s/action-eslint@v2
         with:
-          eslint: true
-          prettier: true
+          eslint-args: '--ignore-path=.gitignore --quiet'
+          extensions: 'js,jsx,ts,tsx'
+          annotations: true
