--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: magento/magento-coding-standard@master
+      - uses: extdn/github-actions-m2/magento-coding-standard@master
 
   run-linters:
     name: Run linters
+    needs: M2 Coding Standard
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +30,7 @@ jobs:
         run: npm ci
 
       - name: Run linters
-        uses: sibiraj-s/action-eslint@v2
+        uses: wearerequired/lint-action@v2
         with:
-          extensions: 'js,jsx,ts,tsx'
-          annotations: true
+          eslint: true
+          prettier: true
