--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
         run: npm ci
 
       - name: Run linters
-        uses: sibiraj-s/action-eslint@v2
+        uses: wearerequired/lint-action@v2
         with:
-          eslint-args: '--ignore-path=.gitignore --quiet'
-          extensions: 'js,jsx,ts,tsx'
-          annotations: true
+          eslint: true
+          prettier: true
