--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,12 @@ jobs:
           php: 7.4
           process: 'install-magento'
           magento_version: 2.4.3
+          elasticsearch: 1
+          composer_version: 2
           no_push: 1
 
-      - run: php bin/magento deploy:mode:set developer && ls -lah
+      - run: php bin/magento deploy:mode:set developer
+        working-directory: magento
+
+      - run: cat var/log/exception.log
         working-directory: magento
