--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,27 +22,9 @@ jobs:
           - 9200:9200
         options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health"  --health-interval=10s --health-timeout=5s --health-retries=10
 
+    container:
+      image: phoenixmedia/magento2:2.4.5
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup PHP with intl
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '7.4'
-
-      - name: 'install fresh magento repo'
-        uses: MAD-I-T/magento-actions@v3.21
-        env:
-          COMPOSER_AUTH: ${{secrets.COMPOSER_AUTH}}
-        with:
-          php: 7.4
-          process: 'install-magento'
-          magento_version: 2.4.3
-          elasticsearch: 1
-          composer_version: 2
-
-      - run: php bin/magento deploy:mode:set developer
-        working-directory: magento
-
-      - run: cat var/log/exception.log
-        working-directory: magento
+      name: log ls
+      run: |
+        ls -lah
