--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,44 +29,9 @@ jobs:
         run: npm ci
 
       - name: Run linters
-        uses: github/super-linter@v5
+        uses: github/super-linter/slim@v5
         with:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
-          VALIDATE_ANSIBLE: false
-          VALIDATE_ARM: false
-          VALIDATE_BASH: false
-          VALIDATE_BASH_EXEC: false
-          VALIDATE_CPP: false
-          VALIDATE_CLANG_FORMAT: false
-          VALIDATE_CLOJURE: false
-          VALIDATE_CLOUDFORMATION: false
-          VALIDATE_COFFEESCRIPT: false
-          VALIDATE_CSHARP: false
-          VALIDATE_CSS: false
-          VALIDATE_DART: false
-          VALIDATE_DOCKERFILE_HADOLINT: false
-          VALIDATE_EDITORCONFIG: false
-          VALIDATE_ENV: false
-          VALIDATE_GHERKIN: false
-          VALIDATE_GITHUB_ACTIONS: false
-          VALIDATE_GITLEAKS: false
-          VALIDATE_GO: false
-          VALIDATE_GOOGLE_JAVA_FORMAT: false
-          VALIDATE_GROOVY: false
-          VALIDATE_HTML: false
-          VALIDATE_JAVA: false
-          VALIDATE_JSCPD: false
-          VALIDATE_JSON: false
-          VALIDATE_JSX: false
-          VALIDATE_KOTLIN: false 
-          VALIDATE_KOTLIN_ANDROID: false
-          VALIDATE_KUBERNETES_KUBECONFORM: false
-          VALIDATE_LATEX: false
-          VALIDATE_LUA: false
-          VALIDATE_MARKDOWN: false
-          VALIDATE_NATURAL_LANGUAGE: false
-          VALIDATE_OPENAPI: false
-          VALIDATE_PERL: false
-          
+          VALIDATE_JAVASCRIPT_ES: true
