--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Run linters
         uses: github/super-linter/slim@v5
+        run: .eslintrc.json /action/lib/.automation/
         env:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
