--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,9 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm ci
-        run: .eslintrc.json /action/lib/.automation/
+        run: |
+          npm ci
+          .eslintrc.json /action/lib/.automation/
 
       - name: Run linters
         uses: github/super-linter/slim@v5
@@ -39,4 +40,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           VALIDATE_JAVASCRIPT_ES: true
           VALIDATE_JAVASCRIPT_STANDARD: true
-          JAVASCRIPT_ES_CONFIG_FILE: ${{ github.workspace }}/.eslintrc.json
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
