--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: |
-          npm ci
-          cp .eslintrc.json /action/lib/.automation/
+        run: npm ci
 
       - name: Run linters
         uses: github/super-linter/slim@v5
@@ -40,4 +38,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           VALIDATE_JAVASCRIPT_ES: true
           VALIDATE_JAVASCRIPT_STANDARD: true
-          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
+          JAVASCRIPT_ES_CONFIG_FILE: ../../../.eslintrc.json
