--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           VALIDATE_JAVASCRIPT_ES: true
           VALIDATE_JAVASCRIPT_STANDARD: true
-          JAVASCRIPT_ES_CONFIG_FILE: ../../../.eslintrc.json
+          DEFAULT_WORKSPACE: ${{ github.workspace }}
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
