--- a/.github/workflows/magento.yml
+++ b/.github/workflows/magento.yml
@@ -5,24 +5,23 @@ on:
 
 
 jobs:
-
   static:
-    name: M2 Coding Standard
+    name: install
     runs-on: ubuntu-latest
 
     services:
-
       magento2:
         image: phoenixmedia/magento2:2.4.5
         options: --name magento2
 
+    steps:
+      - name: creating composer
+        run: docker exec magento2 mkdir /root/.composer
+
+      - name: adding auth json
+        run: docker cp auth.json.sample magento2:/root/.composer/auth.json
+
+      - name: install moonsoon
+        run: docker exec magento2 composer require 
 
     
-    - name: creating composer
-      run: docker exec magento2 mkdir /root/.composer
-
-    - name: adding auth json
-      run: docker cp auth.json.sample magento2:/root/.composer/auth.json
-
-    - name: install moonsoon
-      run: docker exec magento2 composer require 
