--- a/.github/workflows/magento.yml
+++ b/.github/workflows/magento.yml
@@ -15,6 +15,9 @@ jobs:
         options: --name magento2
 
     steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+
       - name: creating composer
         run: docker exec magento2 mkdir /root/.composer
 
