--- a/.github/workflows/magento.yml
+++ b/.github/workflows/magento.yml
@@ -14,7 +14,7 @@ jobs:
         image: phoenixmedia/magento2:2.4.5
         options: --name magento2
         volumes:
-        - ../:/app
+        - ./:/app
 
     steps:
       - name: Check out Git repository
