--- a/.github/workflows/magento.yml
+++ b/.github/workflows/magento.yml
@@ -14,7 +14,7 @@ jobs:
         image: phoenixmedia/magento2:2.4.5
         options: --name magento2
         volumes:
-        - ${{ github.workspace }}:app
+        - ${{ github.workspace }}:/app
 
     steps:
       - name: Check out Git repository
@@ -22,6 +22,9 @@ jobs:
 
       - name: creating composer
         run: docker exec magento2 ls  app/
+
+      - name: creating composer2
+        run: docker exec magento2 ls  /app/
 
       # - name: adding auth json
       #   run: docker cp . magento2:/app/code/
