--- a/.github/workflows/magento.yml
+++ b/.github/workflows/magento.yml
@@ -20,12 +20,14 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v3
 
-      - name: creating composer
-        run: docker exec magento2 ls  app/
-
       - name: creating composer2
         run: docker exec magento2 ls  /app/
 
+      - name: creating composer3
+        run: docker cp /app/ magento2:app/
+
+      - name: creating composer
+        run: docker exec magento2 ls  app/
       # - name: adding auth json
       #   run: docker cp . magento2:/app/code/
 
