--- a/.github/workflows/cap.yml
+++ b/.github/workflows/cap.yml
@@ -3,19 +3,20 @@ name: auto_deployment
 on:
   workflow_dispatch:
 
-deployment-job:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: SSH into the machine and run some commands
-        uses: appleboy/ssh-action@master
-        with:
-          host: 35.164.77.158
-          username: runcloud
-          key:  ${{ secrets.SH_SSH }}
-          port: 22
-          script: |
-            cd /home/runcloud/webapps/cic_test/tools/cap
-            echo "Running deployment script on the server"
-            cap local deploy
+jobs:
+  deployment-job:
+      name: Deploy
+      runs-on: ubuntu-latest
+      steps:
+        - name: SSH into the machine and run some commands
+          uses: appleboy/ssh-action@master
+          with:
+            host: 35.164.77.158
+            username: runcloud
+            key:  ${{ secrets.SH_SSH }}
+            port: 22
+            script: |
+              cd /home/runcloud/webapps/cic_test/tools/cap
+              echo "Running deployment script on the server"
+              cap local deploy
             
