--- a/.github/workflows/cap.yml
+++ b/.github/workflows/cap.yml
@@ -28,4 +28,4 @@ jobs:
           run: |
             echo ${{ steps.myRequest.outputs.response }}
             echo ${{ steps.myRequest.outputs.headers }}
-            echo ${{ fromJson(steps.myRequest.outputs.response).field_you_want_to_access }}
+            echo ${{ fromJson(steps.myRequest.outputs.response) }}
