--- a/.github/workflows/http.yml
+++ b/.github/workflows/http.yml
@@ -16,4 +16,4 @@ jobs:
             url: "https://cic-deploy.humdash.com/"
         - name: Show Response
           run: |
-            echo ${{ fromJson(steps.myRequest.outputs.response).field_you_want_to_access }}
+            echo ${{ steps.myRequest.outputs.response }}
