--- a/.github/workflows/http.yml
+++ b/.github/workflows/http.yml
@@ -16,4 +16,4 @@ jobs:
             url: "https://cic-deploy.humdash.com/"
         - name: Show Response
           run: |
-            echo ${{ steps.myRequest.outputs.response }}
+            echo ${{ steps.myRequest.outputs.response.status_code }}
