--- a/.github/workflows/http.yml
+++ b/.github/workflows/http.yml
@@ -16,4 +16,4 @@ jobs:
             url: "https://cic-deploy.humdash.com/"
         - name: Show Response
           run: |
-            echo ${{ fromJson(steps.myRequest.outputs.response).status }}
+            echo ${{ contains(steps.myRequest.outputs.response, 'Copyright © 2020 Cicero Mfg. & Supply Company, Inc. All rights reserved.') }}
