--- a/.github/workflows/http.yml
+++ b/.github/workflows/http.yml
@@ -15,5 +15,14 @@ jobs:
           with:
             url: "https://cic-deploy.humdash.com/"
         - name: Show Response
-          run: |
-            echo ${{ contains(steps.myRequest.outputs.response, 'Copyright © 2020 Cicero Mfg.') }}
+          if: contains(steps.myRequest.outputs.response, 'Copyright © 2020 Cicero Mfg.') == false
+          uses: appleboy/ssh-action@master
+          with:
+            host: 35.164.77.158
+            username: runcloud
+            key:  ${{ secrets.SH_SSH }}
+            port: 22
+            script: |
+              cd /home/runcloud/webapps/cic_test/tools/cap
+              echo "Running deployment script on the server"
+              cap local deploy
