--- a/.github/workflows/cap.yml
+++ b/.github/workflows/cap.yml
@@ -12,7 +12,7 @@ jobs:
           uses: appleboy/ssh-action@master
           with:
             host: 3.217.124.81
-            username: runcloud
+            username: sigodev
             key:  ${{ secrets.SH_SSH }}
             port: 22
             script: |
