--- a/.github/workflows/couture_stage.yml
+++ b/.github/workflows/couture_stage.yml
@@ -20,3 +20,4 @@ jobs:
               echo "Running deployment script on the server"
               whoami
               pwd
+              cap --version
