--- a/.github/workflows/couture_stage.yml
+++ b/.github/workflows/couture_stage.yml
@@ -15,6 +15,8 @@ jobs:
             username: couture
             key:  ${{ secrets.SH_SSH }}
             port: 22
+            envs: |
+              PATH=/home/couture/.rbenv/shims/cap:$PATH
             script: |
               cd capistrano
               echo "Running deployment script on the server"
