--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,4 +21,4 @@ jobs:
               echo "Running deployment script on the server"
               whoami
               pwd
-              cap --version
+              ruby --version
