--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,6 +16,9 @@ jobs:
             key:  ${{ secrets.SH_SSH }}
             port: 22
             script: |
+              export PATH="$HOME/.rbenv/bin:$PATH"
+              eval "$(rbenv init -)"
+              rbenv global 3.2.2
               ./deployment.sh
               cd capistrano
               echo "Running deployment script on the server"
