--- a/.github/workflows/hyva-stage.yml
+++ b/.github/workflows/hyva-stage.yml
@@ -21,7 +21,7 @@ jobs:
       
       steps:
       	- name: Set Default Value if Not Provided
-      	  run: echo "custom_branch=${{ github.event.inputs.current-branch || '' }}" >> $GITHUB_ENV
+      	  run: echo "custom_branch=${{ github.event.inputs.current-branch || '' }}"
 
         - name: SSH into the machine and run some commands
           uses: appleboy/ssh-action@master
