--- a/.github/workflows/hyva-stage.yml
+++ b/.github/workflows/hyva-stage.yml
@@ -31,6 +31,9 @@ jobs:
             key:  ${{ secrets.SH_SSH_BLD }}
             port: 22
             script: |
+              export PATH="$HOME/.rbenv/bin:$PATH"
+              eval "$(rbenv init -)"
+              rbenv global 3.2.2
               cd /home/sigosigns/build/capistrano
               echo "Running deployment script on the server"
               CUSTOM_BRANCH=$CUSTOM_BRANCH cap staging deploy
