--- a/.github/workflows/hyva-stage.yml
+++ b/.github/workflows/hyva-stage.yml
@@ -36,4 +36,5 @@ jobs:
               rbenv global 3.2.2
               cd /home/sigosigns/build/capistrano
               echo "Running deployment script on the server"
+              echo $CUSTOM_BRANCH
               CUSTOM_BRANCH=$CUSTOM_BRANCH cap staging deploy
