--- a/.github/workflows/hyva-stage.yml
+++ b/.github/workflows/hyva-stage.yml
@@ -33,6 +33,5 @@ jobs:
               eval "$(rbenv init -)"
               rbenv global 3.2.2
               cd /home/sigosigns/build/capistrano
-              echo "Running deployment script on the server"
-              echo ${{ github.event.inputs.current-branch }}
+              echo "Running deployment script on the server with " ${{ github.event.inputs.current-branch }}
               CUSTOM_BRANCH=${{ github.event.inputs.current-branch }} cap staging deploy
